html adjustments to decorate the stuff ignacio had

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,7 +1,8 @@
-<!DOCTYPE html>
-<html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN"
+        "http://www.w3.org/TR/html4/strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en">
   <head>
-    <title>New Sails App</title>
+    <title>NRG</title>
 
     <!-- Viewport mobile tag for sensible mobile support -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -30,6 +31,14 @@
 
     <!--STYLES-->
     <link rel="stylesheet" href="/styles/importer.css">
+    <link rel="stylesheet" href="/styles/loginStyle/login.css">
+    <link rel="stylesheet" href="/styles/loginStyle/login2.css">
+    <link rel="stylesheet" href="/styles/main.css">
+    <link rel="stylesheet" href="/styles/new-home.css">
+    <link rel="stylesheet" href="/styles/owl-carousel.css">
+    <link rel="stylesheet" href="/styles/slick.css">
+    <link rel="stylesheet" href="/styles/theme-carousel.css">
+    <link rel="stylesheet" href="/styles/transition-carousel.css">
     <!--STYLES END-->
   </head>
 
@@ -89,6 +98,20 @@
 
     <!--SCRIPTS-->
     <script src="/js/dependencies/sails.io.js"></script>
+    <script src="/js/homepageJs/button.js"></script>
+    <script src="/js/homepageJs/carousel.js"></script>
+    <script src="/js/homepageJs/jquery-2.0.0.min.js"></script>
+    <script src="/js/homepageJs/jquery-migrate-1.1.1.min.js"></script>
+    <script src="/js/homepageJs/jquery.bookblock.js"></script>
+    <script src="/js/homepageJs/main.js"></script>
+    <script src="/js/homepageJs/modernizr.js"></script>
+    <script src="/js/homepageJs/new-home.js"></script>
+    <script src="/js/homepageJs/popover.js"></script>
+    <script src="/js/homepageJs/scrollspy.js"></script>
+    <script src="/js/homepageJs/slick.min.js"></script>
+    <script src="/js/homepageJs/tooltip.js"></script>
+    <script src="/js/homepageJs/transition.js"></script>
+    <script src="/js/loginJs/login.js"></script>
     <!--SCRIPTS END-->
   </body>
 </html>
