updated site views

--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -42,9 +42,9 @@
                     </div><div class="right-wrapper">
                         <div class="top-menu">
                             <ul>
-                                <li class="submenu-switch"><a href="login.html">Sign In</a>
+                                <li class="submenu-switch"><a href="main">Sign In</a>
                                 </li>
-                                <li class="submenu-switch"><a href="login.html">Register</a>
+                                <li class="submenu-switch"><a href="main">Register</a>
                                 </li>
                             </ul>
                         </div>
@@ -67,7 +67,7 @@
                         <img src="images/slider1.jpg"  alt="Slider Saul"/>
                         <div class="item-caption">
                             <h2>Welcome to NRG</h2>
-                            <a href="login.html">Sign in</a>
+                            <a href="main">Sign in</a>
                         </div>
                     </div>
                 </div><div>
@@ -75,7 +75,7 @@
                         <img src="images/slider2.jpg" alt="Slider Saul"/>
                         <div class="item-caption">
                             <h2>Dont have account?</h2>
-                            <a href="login.html">Register</a>
+                            <a href="main">Register</a>
                         </div>
                     </div>
                 </div><div>
