adjustments and bug fixes

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -6,7 +6,7 @@
 	<meta name="description" content="NRG Site" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<meta http-equiv="X-UA-Compatible" content="IE=9">
-	<link rel="shortcut icon" href="images//NRGLogo.png" />
+	<link rel="shortcut icon" href="images/NRGLogo.png" />
 
 	<!-- NRG CSS---->
 	<link rel="stylesheet" type="text/css" href="../assets/styles/loginStyle/login.css">
@@ -51,7 +51,7 @@
 					<input type="submit" name="Submit">
 				</div>
 				</form>
-			</div>v
+			</div>
 			<!--end of login fields--->
 
 			<!--start of register-->
@@ -67,6 +67,9 @@
 				<div class="field">
 					<input type="password" id="fieldPassword" class="input" required pattern=.*\S.* />
 					<label for="fieldPassword" class="label">Re-enter Password</label>
+				</div>
+				<div class="field">
+					<input type="submit" name="Submit">
 				</div>
 
 			</div>
