--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,8 +1,22 @@
-  	creating a new fucken user I am so fucken sleepy......
-  	<form action="/x/useradd" method="post">
-  		Username:<br>
-  		<input type="text" name="username" value=""><br>
-  		Password:<br>
- 		<input type="password" name="password" value=""><br><br>
-  		<input type="submit" value="Submit">
-	</form> 
+<!--start of register-->
+<div class="registerForm">
+	<form action="/x/useradd" method="post">
+	<div class="field">
+		<input type="text" id="fieldUser" name="username" class="input" required pattern=.*\S.* />
+		<label for="fieldUser" class="label">Create Username</label>
+	</div>
+	<div class="field">
+		<input type="password" name="password" "id="fieldPassword" class="input" required pattern=.*\S.* />
+		<label for="fieldPassword" class="label">Password</label>
+	</div>
+	<div class="field">
+		<input type="password" name="password2" id="fieldPassword" class="input" required pattern=.*\S.* />
+		<label for="fieldPassword" class="label">Re-enter Password</label>
+	</div>
+	<div class="field">
+		<input type="submit" name="Submit">
+	</div>
+	</form>
+</div>
+
+<!--end of Register-->
