--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -30,6 +30,7 @@
     -->
 
     <!--STYLES-->
+    <link rel="stylesheet" href="/styles/appViews.css">
     <link rel="stylesheet" href="/styles/importer.css">
     <link rel="stylesheet" href="/styles/loginStyle/login.css">
     <link rel="stylesheet" href="/styles/main.css">
@@ -97,6 +98,7 @@
 
     <!--SCRIPTS-->
     <script src="/js/dependencies/sails.io.js"></script>
+    <script src="/js/allViews/views.js"></script>
     <script src="/js/homepageJs/button.js"></script>
     <script src="/js/homepageJs/carousel.js"></script>
     <script src="/js/homepageJs/jquery-2.0.0.min.js"></script>
