--- a/assets/styles/new-home.css
+++ b/assets/styles/new-home.css
@@ -517,7 +517,7 @@ form.social-sharing {
 form.social-sharing label {
   display: block;
   margin: 30px 0 5px 0; }
-form.social-sharing label[for] {d
+form.social-sharing label[for] {
   margin-top: 10px; }
 form.social-sharing input {
   display: block;
