fixed js,css, and image problems

--- a/views/room.ejs
+++ b/views/room.ejs
@@ -8,23 +8,23 @@
     <meta name="description" content="NRG Site" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="IE=9">
-    <link rel="shortcut icon" href="images/NRGLogo.png" />
+    <link rel="shortcut icon" href="../images/NRGLogo.png" />
 
 
 
     <!-- NRG CSS---->
-    <link rel="stylesheet" type="text/css" href="styles/new-home.css">
-    <link rel="stylesheet" type="text/css" href="styles/main.css">
-    <link rel="stylesheet" type="text/css" href="styles/slick.css">
-    <link rel="stylesheet" type="text/css" href="styles/owl-carousel.css">
-    <link rel="stylesheet" type="text/css" href="styles/theme-carousel.css">
-    <link rel="stylesheet" type="text/css" href="styles/transition-carousel.css">
-    <link rel="stylesheet" type="text/css" href="styles/appViews.css">
+    <link rel="stylesheet" type="text/css" href="../styles/new-home.css">
+    <link rel="stylesheet" type="text/css" href="../styles/main.css">
+    <link rel="stylesheet" type="text/css" href="../styles/slick.css">
+    <link rel="stylesheet" type="text/css" href="../styles/owl-carousel.css">
+    <link rel="stylesheet" type="text/css" href="../styles/theme-carousel.css">
+    <link rel="stylesheet" type="text/css" href="../styles/transition-carousel.css">
+    <link rel="stylesheet" type="text/css" href="../styles/appViews.css">
 
 
     <link href='http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 
-    <script src="js/homepageJs/modernizr.js"></script>
+    <script src="../js/homepageJs/modernizr.js"></script>
 
     <script type="text/javascript" src="//use.typekit.net/khi6tzf.js"></script>
     <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
@@ -32,7 +32,7 @@
     <script src="//code.jquery.com/jquery-1.10.2.js"></script>
 
 </head>
-<body background="images/loginBack.jpg" class="new-home">
+<body background="../images/loginBack.jpg" class="new-home">
 <!---replace <div id="header" with this <header> and everything inside-->
 <header>
     <div class="container" >
@@ -41,7 +41,7 @@
                 <div class="header-wrapper">
                     <div class="logo">
                         <a href="/site/es.html">
-                            <img src="images/logo.png" alt="Logo" /> </a>
+                            <img src="../images/logo.png" alt="Logo" /> </a>
                     </div><div class="right-wrapper">
                         <div class="top-menu">
                             <ul>
@@ -88,7 +88,7 @@
 
                     <div class="item-caption">
                         <h2><%= corndog.name%></h2>
-                        <p style="font-size: 30px;">Owner:<%= corndog.owner %></p>
+                        <p style="font-size: 30px;">Owner: <%= corndog.owner %></p>
                         <p style="font-size: 30px;">House:<%= corndog.house %></p>
 
                         <a href="/x/roomdelete?name=<%= corndog.name %>&id=<%=id%>">Destroy</a>|
@@ -209,25 +209,25 @@
 <!--<script src="scripts/jquery.dotdotdot.min.js"></script>-->
 <!--<script src="scripts/jquery.validate.js"></script>-->
 
-<script src="js/homepageJs/jquery.bookblock.js"></script>
-<script src="js/homepageJs/main.js"></script>
-<script src="js/homepageJs/jquery-2.0.0.min.js"></script>
-<script src="js/homepageJs/jquery-migrate-1.1.1.min.js"></script>
+<script src="../js/homepageJs/jquery.bookblock.js"></script>
+<script src="../js/homepageJs/main.js"></script>
+<script src="../js/homepageJs/jquery-2.0.0.min.js"></script>
+<script src="../js/homepageJs/jquery-migrate-1.1.1.min.js"></script>
 
 <!--<script src="scripts/affix.js"></script>-->
 <!--<script src="scripts/alert.js"></script>-->
 <!--<script src="scripts/dropdown.js"></script>-->
-<script src="js/homepageJs/tooltip.js"></script>
+<script src="../js/homepageJs/tooltip.js"></script>
 <!--<script src="scripts/modal.js"></script>-->
-<script src="js/homepageJs/transition.js"></script>
-<script src="js/homepageJs/button.js"></script>
-<script src="js/homepageJs/popover.js"></script>
-<<script src="js/homepageJs/carousel.js"></script>
-<script src="js/homepageJs/scrollspy.js"></script>
+<script src="../js/homepageJs/transition.js"></script>
+<script src="../js/homepageJs/button.js"></script>
+<script src="../js/homepageJs/popover.js"></script>
+<<script src="../js/homepageJs/carousel.js"></script>
+<script src="../js/homepageJs/scrollspy.js"></script>
 
 <!-- Added for changes specified in Saul Home Page -->
-<script src="js/homepageJs/slick.min.js"></script>
-<script src="js/homepageJs/new-home.js"></script>
+<script src="../js/homepageJs/slick.min.js"></script>
+<script src="../js/homepageJs/new-home.js"></script>
 
 <script type="text/javascript" src="//www.googleadservices.com/pagead/conversion.js">
 </script>
