--- a/views/device.ejs
+++ b/views/device.ejs
@@ -8,23 +8,23 @@
     <meta name="description" content="NRG Site" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="IE=9">
-    <link rel="shortcut icon" href="images/NRGLogo.png" />
+    <link rel="shortcut icon" href="../images/NRGLogo.png" />
 
 
 
     <!-- NRG CSS---->
-    <link rel="stylesheet" type="text/css" href="styles/new-home.css">
-    <link rel="stylesheet" type="text/css" href="styles/main.css">
-    <link rel="stylesheet" type="text/css" href="styles/slick.css">
-    <link rel="stylesheet" type="text/css" href="styles/owl-carousel.css">
-    <link rel="stylesheet" type="text/css" href="styles/theme-carousel.css">
-    <link rel="stylesheet" type="text/css" href="styles/transition-carousel.css">
-    <link rel="stylesheet" type="text/css" href="styles/appViews.css">
+    <link rel="stylesheet" type="text/css" href="../styles/new-home.css">
+    <link rel="stylesheet" type="text/css" href="../styles/main.css">
+    <link rel="stylesheet" type="text/css" href="../styles/slick.css">
+    <link rel="stylesheet" type="text/css" href="../styles/owl-carousel.css">
+    <link rel="stylesheet" type="text/css" href="../styles/theme-carousel.css">
+    <link rel="stylesheet" type="text/css" href="../styles/transition-carousel.css">
+    <link rel="stylesheet" type="text/css" href="../styles/appViews.css">
 
 
     <link href='http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 
-    <script src="js/homepageJs/modernizr.js"></script>
+    <script src="../js/homepageJs/modernizr.js"></script>
 
     <script type="text/javascript" src="//use.typekit.net/khi6tzf.js"></script>
     <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
@@ -32,7 +32,7 @@
     <script src="//code.jquery.com/jquery-1.10.2.js"></script>
 
 </head>
-<body background="images/loginBack.jpg" class="new-home">
+<body background="../images/loginBack.jpg" class="new-home">
 <!---replace <div id="header" with this <header> and everything inside-->
 <header>
     <div class="container" >
@@ -41,7 +41,7 @@
                 <div class="header-wrapper">
                     <div class="logo">
                         <a href="/site/es.html">
-                            <img src="images/logo.png" alt="Logo" /> </a>
+                            <img src="../images/logo.png" alt="Logo" /> </a>
                     </div><div class="right-wrapper">
                         <div class="top-menu">
                             <ul>
@@ -76,13 +76,13 @@
                     <!--<label for="fieldPassword" class="label">House Image</label>-->
 
                     <select name="image" class="input">
-                        <option value="/images/GivenDevices/Coffee Maker.png">Coffee Maker</option>
-                        <option value="/images/GivenDevices/Laptop.png">Laptop</option>
-                        <option value="/images/GivenDevices/Light Bulb.png">Light Bulb</option>
-                        <option value="/images/GivenDevices/Microwave.png">Microwave</option>
-                        <option value="/images/GivenDevices/PC.png">PC</option>
-                        <option value="/images/GivenDevices/Phone Charger.png">Phone Charger</option>
-                        <option value="/images/GivenDevices/Refrigerator.png">Refrigerator</option>
+                        <option value="../images/GivenDevices/Coffee Maker.png">Coffee Maker</option>
+                        <option value="../images/GivenDevices/Laptop.png">Laptop</option>
+                        <option value="../images/GivenDevices/Light Bulb.png">Light Bulb</option>
+                        <option value="../images/GivenDevices/Microwave.png">Microwave</option>
+                        <option value="../images/GivenDevices/PC.png">PC</option>
+                        <option value="../images/GivenDevices/Phone Charger.png">Phone Charger</option>
+                        <option value="../images/GivenDevices/Refrigerator.png">Refrigerator</option>
                     </select>
                 </div>
                 <div class="field">
@@ -139,19 +139,27 @@
                 <!--<label for="fieldPassword" class="label">House Image</label>-->
 
                 <select name="image" class="input">
-                    <option value="/images/GivenDevices/Coffee Maker.png">Coffee Maker</option>
-                    <option value="/images/GivenDevices/Laptop.png">Laptop</option>
-                    <option value="/images/GivenDevices/Light Bulb.png">Light Bulb</option>
-                    <option value="/images/GivenDevices/Microwave.png">Microwave</option>
-                    <option value="/images/GivenDevices/PC.png">PC</option>
-                    <option value="/images/GivenDevices/Phone Charger.png">Phone Charger</option>
-                    <option value="/images/GivenDevices/Refrigerator.png">Refrigerator</option>
+                    <option value="../images/GivenDevices/Coffee Maker.png">Coffee Maker</option>
+                    <option value="../images/GivenDevices/Laptop.png">Laptop</option>
+                    <option value="../images/GivenDevices/Light Bulb.png">Light Bulb</option>
+                    <option value="../images/GivenDevices/Microwave.png">Microwave</option>
+                    <option value="../images/GivenDevices/PC.png">PC</option>
+                    <option value="../images/GivenDevices/Phone Charger.png">Phone Charger</option>
+                    <option value="../images/GivenDevices/Refrigerator.png">Refrigerator</option>
                 </select>
             </div>
             <div class="field">
                 <input type="text" id="fieldUser" name="watts" class="input" required pattern=.*\S.* />
                 <label for="fieldUser" class="label">Watts</label>
             </div>
+            <div class ="field">
+                <select name="trigger" value="" class="input">
+                    <option value="Off">Off</option>
+                    <option value="On">On</option>
+                </select>
+            </div>
+            <input type="hidden" name="id" value="<%=id%>" >
+            <input type="hidden" name="room" value="<%=room%>" >
             <div class="btn btn-primary">
                 <input type="submit" name="Submit" style="background: transparent;">
             </div>
@@ -245,25 +253,25 @@
 <!--<script src="scripts/jquery.dotdotdot.min.js"></script>-->
 <!--<script src="scripts/jquery.validate.js"></script>-->
 
-<script src="js/homepageJs/jquery.bookblock.js"></script>
-<script src="js/homepageJs/main.js"></script>
-<script src="js/homepageJs/jquery-2.0.0.min.js"></script>
-<script src="js/homepageJs/jquery-migrate-1.1.1.min.js"></script>
+<script src="../js/homepageJs/jquery.bookblock.js"></script>
+<script src="../js/homepageJs/main.js"></script>
+<script src="../js/homepageJs/jquery-2.0.0.min.js"></script>
+<script src="../js/homepageJs/jquery-migrate-1.1.1.min.js"></script>
 
 <!--<script src="scripts/affix.js"></script>-->
 <!--<script src="scripts/alert.js"></script>-->
 <!--<script src="scripts/dropdown.js"></script>-->
-<script src="js/homepageJs/tooltip.js"></script>
+<script src="../js/homepageJs/tooltip.js"></script>
 <!--<script src="scripts/modal.js"></script>-->
-<script src="js/homepageJs/transition.js"></script>
-<script src="js/homepageJs/button.js"></script>
-<script src="js/homepageJs/popover.js"></script>
-<script src="js/homepageJs/carousel.js"></script>
-<script src="js/homepageJs/scrollspy.js"></script>
+<script src="../js/homepageJs/transition.js"></script>
+<script src="../js/homepageJs/button.js"></script>
+<script src="../js/homepageJs/popover.js"></script>
+<<script src="../js/homepageJs/carousel.js"></script>
+<script src="../js/homepageJs/scrollspy.js"></script>
 
 <!-- Added for changes specified in Saul Home Page -->
-<script src="js/homepageJs/slick.min.js"></script>
-<script src="js/homepageJs/new-home.js"></script>
+<script src="../js/homepageJs/slick.min.js"></script>
+<script src="../js/homepageJs/new-home.js"></script>
 
 <script type="text/javascript" src="//www.googleadservices.com/pagead/conversion.js">
 </script>
