--- a/views/device.ejs
+++ b/views/device.ejs
@@ -40,14 +40,14 @@
             <div class="col-md-12">
                 <div class="header-wrapper">
                     <div class="logo">
-                        <a href="/site/es.html">
+                        <a href="../">
                             <img src="../images/logo.png" alt="Logo" /> </a>
                     </div><div class="right-wrapper">
                         <div class="top-menu">
                             <ul>
                                 <li class="submenu-switch"><a style="color:white;" href='/x/logout'>Log Out</a>
                                 </li>
-                                <li class="submenu-switch"><a style="color:white;" href="login.html">Register</a>
+                                <li class="submenu-switch"><a style="color:white;" href="../main">Back To Homesr</a>
                                 </li>
                             </ul>
                         </div>
