--- a/views/room.ejs
+++ b/views/room.ejs
@@ -40,14 +40,14 @@
             <div class="col-md-12">
                 <div class="header-wrapper">
                     <div class="logo">
-                        <a href="/site/es.html">
+                        <a href="../">
                             <img src="../images/logo.png" alt="Logo" /> </a>
                     </div><div class="right-wrapper">
                         <div class="top-menu">
                             <ul>
                                 <li class="submenu-switch"><a style="color:white;" href='/x/logout'>Log Out</a>
                                 </li>
-                                <li class="submenu-switch"><a style="color:white;" href="login.html">Register</a>
+                                <li class="submenu-switch"><a style="color:white;" href="../main">Back to Homes</a>
                                 </li>
                             </ul>
                         </div>
@@ -107,8 +107,6 @@
 
     <div class="container">
         <h2>Add Room</h2>
-        <div class="addRooms">
-            <h2>Add Room</h2>
             <form action="/x/roomadd" method="post">
                 <div class="field">
                     <input type="text" id="fieldUser" name="name" class="input" required pattern=.*\S.* />
@@ -119,7 +117,6 @@
                     <input type="submit" name="Submit" style="background: transparent;">
                 </div>
             </form>
-        </div>
     </div>
 </section>
 <% } %>
